# OLAP2025

./: .gitignore  CMakeLists.txt  INSTRUCCIONES_EJECUCION.md  Iniciar.bat  README.md  implementation_plan.md  run_app.ps1  task.md
.cache/clangd/index/: AnaliticaML.h.6C5B520EDECB48B2.idx  CuboDatos.cpp.837637F7392D77DB.idx  CuboDatos.h.1BF8C933220B7840.idx  DialogoSucursal.cpp.C5F79A9B5053FB26.idx  DialogoSucursal.h.99AD0D9A9E054F16.idx  ExportadorCSV.cpp.816FA38C17CB92E8.idx  ExportadorCSV.h.930664C2B91A5B7F.idx  GestorAnalitica.cpp.F75DCCDBC9F7607C.idx  GestorAnalitica.h.A4C11E9491802F05.idx  GestorBaseDatos.cpp.66EF4B28A33D6513.idx  GestorBaseDatos.h.FA1D3A6887A98D77.idx  GestorFavoritos.cpp.453B1062D2C34A38.idx  GestorFavoritos.h.AF16D2EB8DD41EEC.idx  KMeans.cpp.C1050F2FF70E3278.idx  KMeans.h.B317439484FB2E8D.idx  MotorETL.cpp.63116F01C4E08068.idx  MotorETL.h.4D56D956FD47E104.idx  PipelineTransformacion.cpp.E54F9A62539E29C1.idx  PipelineTransformacion.h.7FFB20D588453F06.idx  ProcesadorConsultas.cpp.6BC50A4EF731F68B.idx  ProcesadorConsultas.h.03CB852834C36CD0.idx  ServicioEtl.cpp.88DC77AF67FA4053.idx  ServicioEtl.h.6F0D6F76F6E549E1.idx  SimuladorDatos.cpp.EFB83EA19C4D3FC9.idx  SimuladorDatos.h.BEBB4662F186E3F0.idx  VentanaPrincipal.cpp.F8906669789DCED3.idx  VentanaPrincipal.h.7436B5AAF382CB60.idx  WidgetAnalitica.cpp.4F5EF7E86312BA1C.idx  WidgetAnalitica.h.99023C11ACCD8D21.idx  WidgetEtl.cpp.B5C6EA04BF91D3FC.idx  WidgetEtl.h.587C269FF5F41294.idx  WidgetFiltrosGlobales.cpp.54F4BCDFCDF00FB6.idx  WidgetFiltrosGlobales.h.839709EBE6783DE6.idx  WidgetHeatmap.cpp.7B17DD4053118EFA.idx  WidgetHeatmap.h.C888C66080ABC227.idx  WidgetHistorial.cpp.413DD0D345121463.idx  WidgetHistorial.h.87E02CD510F8A397.idx  WidgetMapa.cpp.9EADAF0AE5C2B1EC.idx  WidgetMapa.h.EC630880D131917B.idx  WidgetTablero.cpp.9F17D530F83E1C9C.idx  (+8 more)
data/source/: productos.csv  sucursales.csv
docs/: Herramientas_Graficas.md  Manual_Instalacion.md  Pedagogical_Guide.md  Presentation_Slides.md
scripts/: build_windows.bat
src/: main.cpp
src/SistemaOLAP/Analitica/: GestorAnalitica.cpp  GestorAnalitica.h
src/SistemaOLAP/Nucleo/: CuboDatos.cpp  CuboDatos.h  MotorETL.cpp  MotorETL.h  PipelineTransformacion.cpp  PipelineTransformacion.h  ProcesadorConsultas.cpp  ProcesadorConsultas.h
src/analytics/: AnaliticaML.h  KMeans.cpp  KMeans.h
src/core/: CacheConsultas.h  GestorBaseDatos.cpp  GestorBaseDatos.h  ServicioEtl.cpp  ServicioEtl.h  SimuladorDatos.cpp  SimuladorDatos.h
src/ui/: DialogoSucursal.cpp  DialogoSucursal.h  ExportadorCSV.cpp  ExportadorCSV.h  GestorFavoritos.cpp  GestorFavoritos.h  VentanaPrincipal.cpp  VentanaPrincipal.h  Visor3D.qml  WidgetAnalitica.cpp  WidgetAnalitica.h  WidgetEtl.cpp  WidgetEtl.h  WidgetFiltrosGlobales.cpp  WidgetFiltrosGlobales.h  WidgetHeatmap.cpp  WidgetHeatmap.h  WidgetHistorial.cpp  WidgetHistorial.h  WidgetMapa.cpp  WidgetMapa.h  WidgetMapbox.cpp  WidgetMapbox.h  WidgetTablero.cpp  WidgetTablero.h  WidgetVisor3D.cpp  WidgetVisor3D.h  WidgetVisor3DDual.cpp  WidgetVisor3DDual.h  WidgetVisor3DSimple.cpp  WidgetVisor3DSimple.h  mapa.html
